fixed overflow problem

--- a/client/src/pages/search/search.css
+++ b/client/src/pages/search/search.css
@@ -143,8 +143,7 @@
 .info-item-data {
   display: flex;
   gap: 5px;
-  overflow-x: hidden;
-  text-overflow: ellipsis;
+  flex-wrap: wrap;
 }
 
 .info-item-data-text {
